--- a/PuppyLabs/tools/PuppyLabs/Views/Home/Index.cshtml
+++ b/PuppyLabs/tools/PuppyLabs/Views/Home/Index.cshtml
@@ -11,3 +11,19 @@
 <div class="jumbotron">
     <img src="~/Content/Puppy_Labs_Chew_Toys.jpg" />
 </div>
+
+<div class="row alert alert-info" role="alert">
+    <p>Check out these customer testimonials!</p>
+</div>
+<div class="row">
+    <div class="col-md-4">
+        <img src="~/Content/ImposterSyndrome.png" width="350px" />
+    </div>
+    <div class="col-md-4">
+        <img src="~/Content/WorkingFromHome.png" width="350px" />
+    </div>
+    <div class="col-md-4">
+        <img src="~/Content/HairOfTheDog.png" width="350px" />
+    </div>
+</div>
+
