--- a/PuppyLabs/tools/PuppyLabs/Views/Shared/_Layout.cshtml
+++ b/PuppyLabs/tools/PuppyLabs/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>                    
+                    <li>@Html.ActionLink("Products", "Products", "Home")</li>
                 </ul>
                 <p class="navbar-text navbar-right">Cluster: @ViewBag.ClusterName</p>
                 <p class="navbar-text navbar-right">Version: @ViewBag.PackageVersion</p>
